📝first draft ms

--- a/metadata.yml
+++ b/metadata.yml
@@ -1,16 +1,20 @@
-title: "Research compendium template"
-running_title: "Research compendium template"
-abstract: "A template with old vibes. Pure markdown and pandoc."
+title: "Unifying individual and metapopulation scales with stochastic population models: the effect of climate and competition on tree range limits"
+running_title: "Unifying scales with stochastic population models"
+abstract: "TODO"
 keywords:
-    - "reproducibility"
+    - "Integral Projection Models"
+    - "Species distribution"
+    - "Individual variability"
+    - "Environmental stochasticity"
+    - "Forest demography"
 highlights:
     - "Cool but useless"
-    - "At least I can just fork"
 supporting-files:
-  - "suppInfo"
+  - "suppInfo1"
+  - "suppInfo2"
 language: "en"
 license: "CC-BY"
-github-repo: "willvieira/research-compendium"
+github-repo: "willvieira/ms_forest-suitable-probability"
 bibliography: "https://dl.dropboxusercontent.com/scl/fi/dezttmg4f3ilnnacep1pt/library.bib?rlkey=6ihjlqic0bmttjqeo846h9s9b&dl=0"
 zenodoDOI: ""
 google-analytics: ""
@@ -40,7 +44,7 @@ affiliations:
 acknowledgments: "We thank nice people"
 data_availability: "All the code and data used to reproduce the analysis, figure and manuscript are stored as a research compendium at [URL]())."
 funding: "This research was supported by the BIOS² NSERC CREATE program."
-authorship: "WV coded this but never published online."
+authorship: ""
 conflicts-of-interest: "The authors declare no conflict of interest."
 
 link-citations: true
