--- a/metadata.yml
+++ b/metadata.yml
@@ -13,7 +13,8 @@ supporting-files:
   - "suppInfo"
 language: "en"
 license: "CC-BY"
-github-repo: "willvieira/ms_forest-suitable-probability"
+github-user: "willvieira"
+github-repo: "ms_forest-suitable-probability"
 bibliography: "https://dl.dropboxusercontent.com/scl/fi/dezttmg4f3ilnnacep1pt/library.bib?rlkey=6ihjlqic0bmttjqeo846h9s9b&dl=0"
 zenodoDOI: ""
 google-analytics: ""
