--- a/metadata.yml
+++ b/metadata.yml
@@ -50,3 +50,13 @@ conflicts-of-interest: "The authors declare no conflict of interest."
 link-citations: true
 figures-at-end: false
 double-blind: false
+
+# metadata associated with thesis template
+chapter-number: 3
+chapter-title: "Intégrer les échelles individuelle et métapopulation à travers des modèles stochastiques de population : l'impact du climat et de la compétition sur les limites de répartition des arbres"
+resume-contribution: "Cet article a pour objective de...\\par Cet article a été conçu par moi-même et mon directeur, Dominique Gravel. ..."
+published: false
+# if published = true
+journal: ""
+year: ""
+volume-isue-pages: ""
